[tool.poetry]
name = "yabigoo"
version = "0.1.1"
description = ""
authors = ["Alexander Myasoedov <alexander.myasoedov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
fake_useragent = "^0.1.11"
opencv-python = "^4.2.0"
opencv-contrib-python = "^4.2.0"
pyGeoTile = "^1.0.6"
tifffile = "^2020.2.16"
utm = "^0.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
